all proparty add

--- a/index.html
+++ b/index.html
@@ -11,29 +11,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header">
+        <!-- navbar start section start  -->
         <nav class="nav container">
             <div class="logo">G3 Architects</div>
             <div class="text">
                 <ul>
                     <li>Home</li>
                     <li>About</li>
+                    <li>Blog </li>
                     <li> Contact Us</li>
                     <li>Login</li>
                 </ul>
             </div>
         </nav>
+         <!-- navbar start section end  -->
         <!-- banner section start -->
         <div id="banner">
             <div class="container">
                 <div class="banner">
                     <div class="banner-text-item">
-                        <h1 class=" banner-title">Brand New
-                            <br> Group of Architects
-                        </h1>
+                        <h1 class=" banner-title">Brand New <br> Group of Architects</h1>
                         <p class="banner-discription">There are many variations of passages of Lorem Ipsum available,
                             but the majority have suffered alteration in <br> some form, by injected humour, or
                             randomised words which don't look even</p>
@@ -77,8 +80,7 @@
                 <div class="features-text">
                     <div class="title">
                         <div class="item"></div>
-                        <h2 class="section-title"> Features you will <br> love & enjoy
-                        </h2>
+                        <h2 class="section-title"> Features you will <br> love & enjoy</h2>
                     </div>
                     <p class="section-discription">There are many variations of passages of Lorem Ipsum available, but
                         the majority have suffered alteration in some form, by injected humour, or randomised words
@@ -97,6 +99,12 @@
                                 or randomised...........</p>
                         </div>
                         <div class="text-box">
+                            <h3 class="text-box-title">Awesome Modern Design</h3>
+                            <p class="section-discription">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised...........</p>
+                        </div>
+                        <div class="text-box">
                             <h3 class="text-box-title">Super Easy to Edit</h3>
                             <p class="section-discription">There are many variations of passages of Lorem Ipsum
                                 available, but the majority have suffered alteration in some form, by injected humour,
@@ -106,8 +114,7 @@
                 </div>
                 <div class="features-img">
                     <img src="images/architect.png" alt="">
-                    <button class="btn-img">
-                        10+Year <br>
+                    <button class="btn-img">10+Year <br>
                         <p>Experience</p>
                     </button>
                 </div>
@@ -116,8 +123,7 @@
         <!-- Features you will love & enjoy section end -->
         <!-- some facts section start  -->
         <div id="some-facts">
-            <h2 class="section-title">Some Facts
-            </h2>
+            <h2 class="section-title">Some Facts </h2>
             <p class="section-discription">There are many variations of passages of Lorem Ipsum available, but <br> the
                 majority have suffered alteration.</p>
             <div class="some-facts-item">
@@ -144,23 +150,9 @@
             </div>
         </div>
         <!-- some facts section end -->
-        <!--  our payments method secton start  -->
-        <div id="payments">
-            <h2 class="section-title">Our Payments Method
-            </h2>
-            <div class="payment-option">
-                <img src="images/payment/bkash.png" alt="">
-                <img src="images/payment/download.png" alt="">
-                <img src="images/payment/download2.jpg" alt="">
-                <img src="images/payment/nagad_marchant.png" alt="">
-                <img src="images/payment/rocket.png" alt="">
-            </div>
-        </div>
-        <!--  our payments method section end  -->
         <!-- Our Sponspors section start -->
         <div id="our-sponspors">
-            <h2 class="section-title">Our Sponspors
-            </h2>
+            <h2 class="section-title">Our Sponspors</h2>
             <p class="section-discription">There are many variations of passages of Lorem Ipsum available, but <br> the
                 majority have suffered alteration.</p>
             <div class="sponspors">
@@ -171,14 +163,28 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </div>
-
         <!-- Our Sponspors section end -->
-    </main>
-    <footer class="container">
-        <div class="footer">
-            <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
+        <!--  our payments method secton start  -->
+        <div id="payments">
+            <h2 class="section-title">Our Payments Method</h2>
+            <div class="payment-option">
+                <img src="images/payment/bkash.png" alt="">
+                <img src="images/payment/download.png" alt="">
+                <img src="images/payment/download2.jpg" alt="">
+                <img src="images/payment/nagad_marchant.png" alt="">
+                <img src="images/payment/rocket.png" alt="">
+            </div>
         </div>
-    </footer>
+        <!--  our payments method section end  -->
+    </main>
+    <!-- footer section start  -->
+    <div id="footer">
+        <footer class="container">
+            <div class="footer">
+                <p class="footer-text">All rights reserved copyright<i class="fa-regular fa-copyright"></i>2023 startup landing page design</p>
+            </div>
+        </footer>
+    </div>
+    <!-- footer section end  -->
 </body>
-
 </html>
